--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,21 @@
 spring.application.name=pfabackend
-# Configuration H2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Activer la console H2
-spring.h2.console.enabled=true
+# Configuration MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/pfadb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
 
-# Configurer JPA
+# Configurer JPA pour MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Configuration des logs SQL (optionnel mais utile pour le débogage)
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Configuration JWT
+jwt.expiration.ms=86400000
+server.port=8081
+
