--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=pfabackend
 spring.datasource.url=jdbc:mysql://localhost:3306/pfadb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Chaimanour@22
 
 # Configurer JPA pour MySQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -17,5 +17,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Configuration JWT
 jwt.expiration.ms=86400000
-server.port=8081
+server.port=8082
 
