add documents to task

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/pfadb?createDatabaseIfNotExist
 #spring.datasource.url=jdbc:mysql://localhost:3000/pfadb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Riu9444ms,,
 
 # Configurer JPA pour MySQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
